# empctl-cookies

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
mcp_server/{{cookiecutter.project_slug}}/: pyproject.toml  run.sh
mcp_server/{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug}}/: client.py  main.py
python_ai_agent/{{cookiecutter.project_slug}}/: .env.sample  Dockerfile  README.md  pyproject.toml  quickstart.sh  run.sh
python_ai_agent/{{cookiecutter.project_slug}}/.github/workflows/: deploy.yaml
python_ai_agent/{{cookiecutter.project_slug}}/_alembic/versions/: 8c9417c8d594_initial_commit.py
python_ai_agent/{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug}}/: logger.py  main.py  migrate.py  run_local.py
web_server/: cookiecutter.json
web_server/{{cookiecutter.project_slug}}/: Dockerfile  README.md  pyproject.toml  quickstart.sh  run.sh
web_server/{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug}}/: main.py
x_agent/: cookiecutter.json
x_agent/{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  README.md  quickstart.sh  run.sh
x_agent/{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/python_ai_agent/: .env.sample  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  quickstart.sh
{{cookiecutter.project_slug}}/python_ai_agent/_alembic/: env.py
{{cookiecutter.project_slug}}/python_ai_agent/{{ cookiecutter.project_slug}}/: revision.py
{{cookiecutter.project_slug}}/x_agent/: .env.sample  README.md  pyproject.toml
{{cookiecutter.project_slug}}/x_agent/{{ cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/x_agent/{{ cookiecutter.project_slug}}/prompts/: main.md
(+22 files in other folders)
