[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["INSERT_NAME <INSERT_EMAIL>"]
packages = [
    { include = "{{ cookiecutter.project_slug }}" }
]

[tool.poetry.dependencies]
python = "^3.12"
emp-agents = "^0.3.1"
emp-hooks = "^0.0.10"
pydantic = "^2.11.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
fastapi = "^0.115.12"
mcp = {extras = ["cli"], version = "^1.6.0"}
uvicorn = "^0.34.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "demo"
